[package]
name = "themis"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
borsh = "0.9.3"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
serde = "1.0.160"
serde_yaml = "0.9.21"
solana-client = "~1.14"
solana-logger = "~1.14"
solana-program = "~1.14"
solana-sdk = "~1.14"
spl-governance = "=2.2.4"
